Add support for more toms
This commit adds 2 new toms using the existing samples.
It also lays the foundation for a total of 6 toms.
Further samlples are required to add a high tom and a second
floor tom.

--- a/index.html
+++ b/index.html
@@ -283,10 +283,22 @@
 				<li onclick='myGrooveWriter.notePopupClick("hh","metronome_accent");'>Click - accent</li>
 			</ul>
 		</div>
-		<div class="noteContextMenu">
+		<!-- <div class="noteContextMenu">
 			<ul id="tom1ContextMenu" class="list">
 				<li onclick='myGrooveWriter.notePopupClick("tom1", "off");'>Off</li>
 				<li onclick='myGrooveWriter.notePopupClick("tom1", "normal");'>Tom Normal</li>
+			</ul>
+		</div> -->
+		<div class="noteContextMenu">
+			<ul id="tom2ContextMenu" class="list">
+				<li onclick='myGrooveWriter.notePopupClick("tom2", "off");'>Off</li>
+				<li onclick='myGrooveWriter.notePopupClick("tom2", "normal");'>Tom Normal</li>
+			</ul>
+		</div>
+		<div class="noteContextMenu">
+			<ul id="tom3ContextMenu" class="list">
+				<li onclick='myGrooveWriter.notePopupClick("tom3", "off");'>Off</li>
+				<li onclick='myGrooveWriter.notePopupClick("tom3", "normal");'>Tom Normal</li>
 			</ul>
 		</div>
 		<div class="noteContextMenu">
@@ -295,6 +307,18 @@
 				<li onclick='myGrooveWriter.notePopupClick("tom4", "normal");'>Tom Normal</li>
 			</ul>
 		</div>
+		<div class="noteContextMenu">
+			<ul id="tom5ContextMenu" class="list">
+				<li onclick='myGrooveWriter.notePopupClick("tom5", "off");'>Off</li>
+				<li onclick='myGrooveWriter.notePopupClick("tom5", "normal");'>Tom Normal</li>
+			</ul>
+		</div>
+		<!-- <div class="noteContextMenu">
+			<ul id="tom6ContextMenu" class="list">
+				<li onclick='myGrooveWriter.notePopupClick("tom6", "off");'>Off</li>
+				<li onclick='myGrooveWriter.notePopupClick("tom6", "normal");'>Tom Normal</li>
+			</ul>
+		</div> -->
 		<div class="noteContextMenu">
 			<ul id="snareContextMenu" class="list">
 				<li onclick='myGrooveWriter.notePopupClick("snare", "off");'>Off</li>
@@ -334,12 +358,28 @@
 				<li onclick='myGrooveWriter.noteLabelPopupClick("hh", "cancel");'>cancel</li>
 			</ul>
 		</div>
-		<div class="noteContextMenu">
+		<!-- <div class="noteContextMenu">
 			<ul id="tom1LabelContextMenu" class="list">
 				<li onclick='myGrooveWriter.noteLabelPopupClick("tom1", "all_off");'>all Toms <b>Off</b></li>
 				<li onclick='myGrooveWriter.noteLabelPopupClick("tom1", "all_on");'>all Toms <b>On</b></li>
 				<li id='mute_tom1_menu_item' onclick='myGrooveWriter.noteLabelPopupClick("tom1", "mute");'>mute tom sound</li>
 				<li onclick='myGrooveWriter.noteLabelPopupClick("tom1", "cancel");'>cancel</li>
+			</ul>
+		</div> -->
+		<div class="noteContextMenu">
+			<ul id="tom2LabelContextMenu" class="list">
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom2", "all_off");'>all Toms <b>Off</b></li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom2", "all_on");'>all Toms <b>On</b></li>
+				<li id='mute_tom2_menu_item' onclick='myGrooveWriter.noteLabelPopupClick("tom2", "mute");'>mute tom sound</li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom2", "cancel");'>cancel</li>
+			</ul>
+		</div>
+		<div class="noteContextMenu">
+			<ul id="tom3LabelContextMenu" class="list">
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom3", "all_off");'>all Toms <b>Off</b></li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom3", "all_on");'>all Toms <b>On</b></li>
+				<li id='mute_tom3_menu_item' onclick='myGrooveWriter.noteLabelPopupClick("tom3", "mute");'>mute tom sound</li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom3", "cancel");'>cancel</li>
 			</ul>
 		</div>
 		<div class="noteContextMenu">
@@ -350,6 +390,22 @@
 				<li onclick='myGrooveWriter.noteLabelPopupClick("tom4", "cancel");'>cancel</li>
 			</ul>
 		</div>
+		<div class="noteContextMenu">
+			<ul id="tom5LabelContextMenu" class="list">
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom5", "all_off");'>all Toms <b>Off</b></li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom5", "all_on");'>all Toms <b>On</b></li>
+				<li id='mute_tom5_menu_item' onclick='myGrooveWriter.noteLabelPopupClick("tom5", "mute");'>mute tom sound</li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom5", "cancel");'>cancel</li>
+			</ul>
+		</div>
+		<!-- <div class="noteContextMenu">
+			<ul id="tom6LabelContextMenu" class="list">
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom6", "all_off");'>all Toms <b>Off</b></li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom6", "all_on");'>all Toms <b>On</b></li>
+				<li id='mute_tom6_menu_item' onclick='myGrooveWriter.noteLabelPopupClick("tom6", "mute");'>mute tom sound</li>
+				<li onclick='myGrooveWriter.noteLabelPopupClick("tom6", "cancel");'>cancel</li>
+			</ul>
+		</div> -->
 		<div class="noteContextMenu">
 			<ul id="snareLabelContextMenu" class="list">
 				<li onclick='myGrooveWriter.noteLabelPopupClick("snare", "all_off");'>all Snares <b>Off</b></li>
