--- a/GrooveMultiDisplay.html
+++ b/GrooveMultiDisplay.html
@@ -64,12 +64,12 @@
 	
 	<h2>4/4 Groove with Toms</h2>
 	<script>
-		GrooveDisplay.AddGrooveDisplayToPage("?Mode=view&TimeSig=4/4&Div=16&Tempo=80&Measures=1&H=|xxxxxxxxxxxxxxxx|&S=|----O-------O---|&K=|o-------o-------|&T1=|-x---x---x---x--|&T4=|--x---x---x---x-|&Stickings=|----------------|", true, true);
+		GrooveDisplay.AddGrooveDisplayToPage("?Mode=view&TimeSig=4/4&Div=16&Tempo=80&Measures=1&H=|xxxxxxxxxxxxxxxx|&S=|----O-------O---|&K=|o-------o-------|&T2=|-x---x---x---x--|&T3=|----------------|&T4=|--x---x---x---x-|&T5=|----------------|&Stickings=|----------------|", true, true);
 	</script>
 	
 	<h2>4/4 2 measure Groove with Toms</h2>
 	<script>
-		GrooveDisplay.AddGrooveDisplayToPage("?Mode=view&TimeSig=4/4&Div=16&Tempo=80&Measures=2&MetronomeFreq=4&H=|X-x-X-x-X-x-X-x-|----------------|&S=|----O-------O---|O--oO--oO--oO--o|&K=|o-------o-------|----------------|&T1=|----------------|-o---o---o---o--|&T4=|----------------|--o---o---o---o-|&Stickings=|c-c-c-c-c-c-c-c-|cccccccccccccccc|", true, true);
+		GrooveDisplay.AddGrooveDisplayToPage("?Mode=view&TimeSig=4/4&Div=16&Tempo=80&Measures=2&MetronomeFreq=4&H=|X-x-X-x-X-x-X-x-|----------------|&S=|----O-------O---|O--oO--oO--oO--o|&K=|o-------o-------|----------------|&T2=|----------------|-o---o---o---o--|&T3=|----------------|----------------|&T4=|----------------|--o---o---o---o-|&T5=|----------------|----------------|&Stickings=|c-c-c-c-c-c-c-c-|cccccccccccccccc|", true, true);
 	</script>
 	
 	<h2>1/8 note triplets</h2>
