--- a/grooveDBTest.html
+++ b/grooveDBTest.html
@@ -70,8 +70,16 @@
 	TabIn.footOtherTab    = '------------------------';
         if('{{{HasTom1Tab}}}' != '{{{HasTom1Tab}}}')
             TabIn.tom1Tab         = '{{{HasTom1Tab}}}';
+	if('{{{HasTom2Tab}}}' != '{{{HasTom2Tab}}}')
+		TabIn.tom2Tab = '{{{HasTom2Tab}}}';
+	if('{{{HasTom3Tab}}}' != '{{{HasTom3Tab}}}')
+		TabIn.tom3Tab = '{{{HasTom3Tab}}}';
 	if('{{{HasTom4Tab}}}' != '{{{HasTom4Tab}}}')
-            TabIn.tom4Tab         = '{{{HasTom4Tab}}}';
+		TabIn.tom4Tab = '{{{HasTom4Tab}}}';
+	if('{{{HasTom5Tab}}}' != '{{{HasTom5Tab}}}')
+		TabIn.tom5Tab = '{{{HasTom5Tab}}}';
+	if('{{{HasTom6Tab}}}' != '{{{HasTom6Tab}}}')
+		TabIn.tom6Tab = '{{{HasTom6Tab}}}';
 	
 	// put it on the page
 	GrooveDisplay.GrooveDBFormatPutGrooveOnPage(TabIn);
